--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -208,7 +208,7 @@
   "retry": "إعادة المحاولة",
   "goHome": "الذهاب للرئيسية",
   "downloadError": "فشل في تحميل الملف",
-  "Downloading": "جاري التحميل...",
+  "downloading": "جاري التحميل...",
   "edmsPortal": "بوابة نظام إدارة الوثائق",
   "welcomeToEdms": "مرحباً بكم في بوابة نظام إدارة الوثائق",
   "selectSystem": "اختر نظاماً أدناه للوصول إلى أدوات إدارة الوثائق الخاصة بك",
