researcher first commit

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -222,5 +222,23 @@
   "foldersDesc": "تصفح جميع ملفاتك ومجلداتك",
   "contentCannotBeDisplayed": "لا يمكن عرض المحتوى",
   "LoadingDocument": "جاري تحميل المستند",
-  "generatedLinksSuccess": "تم إنشاء الروابط بنجاح"
+  "generatedLinksSuccess": "تم إنشاء الروابط بنجاح",
+  "researcher": "الباحث",
+  "searchType": "نوع البحث",
+  "selectType": "اختر النوع",
+  "keyword": "كلمة البحث",
+  "enterKeyword": "أدخل كلمة البحث...",
+  "fromDate": "من تاريخ",
+  "toDate": "إلى تاريخ",
+  "searching": "جاري البحث...",
+  "startSearchPrompt": "اختر نوعاً وأدخل معايير للبحث.",
+  "researcherDesc": "البحث في المستندات عبر جميع النماذج",
+  "matchType": "نوع المطابقة",
+  "matchContains": "يحتوي على",
+  "matchExact": "تطابق تام",
+  "matchStartsWith": "يبدأ بـ",
+  "searchScope": "نطاق البحث",
+  "searchScopeHint": "اتركه كـ 'تلقائي (ذكي)' لاستخدام الجدول الأمثل الافتراضي",
+  "scopeAuto": "تلقائي (ذكي)",
+  "scopeGlobal": "شامل (جميع الجداول)"
 }
