--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -223,5 +223,23 @@
   "foldersDesc": "Browse all your files and folders",
   "contentCannotBeDisplayed": "Content cannot be displayed",
   "LoadingDocument": "Loading document",
-  "generatedLinksSuccess": "Successfully generated links"
+  "generatedLinksSuccess": "Successfully generated links",
+  "researcher": "Researcher",
+  "searchType": "Search Type",
+  "selectType": "Select Type",
+  "keyword": "Keyword",
+  "enterKeyword": "Enter keyword...",
+  "fromDate": "From Date",
+  "toDate": "To Date",
+  "searching": "Searching...",
+  "startSearchPrompt": "Select a type and enter criteria to search.",
+  "researcherDesc": "Search documents across all forms",
+  "matchType": "Match Type",
+  "matchContains": "Contains",
+  "matchExact": "Exact Match",
+  "matchStartsWith": "Starts With",
+  "searchScope": "Search Scope",
+  "searchScopeHint": "Leave as 'Auto (Intelligent)' to use the default optimized table",
+  "scopeAuto": "Auto (Intelligent)",
+  "scopeGlobal": "Global (All Tables)"
 }
