researcher to profile search and big improvements

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -223,7 +223,7 @@
   "contentCannotBeDisplayed": "لا يمكن عرض المحتوى",
   "LoadingDocument": "جاري تحميل المستند",
   "generatedLinksSuccess": "تم إنشاء الروابط بنجاح",
-  "researcher": "الباحث",
+  "researcher": "بحث الملفات",
   "searchType": "نوع البحث",
   "selectType": "اختر النوع",
   "keyword": "كلمة البحث",
@@ -232,13 +232,17 @@
   "toDate": "إلى تاريخ",
   "searching": "جاري البحث...",
   "startSearchPrompt": "اختر نوعاً وأدخل معايير للبحث.",
-  "researcherDesc": "البحث في المستندات عبر جميع النماذج",
+  "researcherDesc": "البحث في ملفات التعريف عبر جميع النماذج",
   "matchType": "نوع المطابقة",
   "matchContains": "يحتوي على",
   "matchExact": "تطابق تام",
   "matchStartsWith": "يبدأ بـ",
   "searchScope": "نطاق البحث",
-  "searchScopeHint": "اتركه كـ 'تلقائي (ذكي)' لاستخدام الجدول الأمثل الافتراضي",
+  "searchScopeHint": "اختر نطاقاً لتصفية أنواع البحث",
+  "selectScope": "اختر النطاق",
   "scopeAuto": "تلقائي (ذكي)",
-  "scopeGlobal": "شامل (جميع الجداول)"
+  "scopeGlobal": "شامل (جميع الجداول)",
+  "searchCriteria": "معايير البحث",
+  "addSearchRow": "إضافة صف بحث",
+  "removeRow": "إزالة الصف"
 }
