--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -224,7 +224,7 @@
   "contentCannotBeDisplayed": "Content cannot be displayed",
   "LoadingDocument": "Loading document",
   "generatedLinksSuccess": "Successfully generated links",
-  "researcher": "Researcher",
+  "researcher": "Profile Search",
   "searchType": "Search Type",
   "selectType": "Select Type",
   "keyword": "Keyword",
@@ -233,13 +233,17 @@
   "toDate": "To Date",
   "searching": "Searching...",
   "startSearchPrompt": "Select a type and enter criteria to search.",
-  "researcherDesc": "Search documents across all forms",
+  "researcherDesc": "Search document profiles across all forms",
   "matchType": "Match Type",
   "matchContains": "Contains",
   "matchExact": "Exact Match",
   "matchStartsWith": "Starts With",
   "searchScope": "Search Scope",
-  "searchScopeHint": "Leave as 'Auto' to use the default optimized table",
+  "searchScopeHint": "Select a scope to filter search types",
+  "selectScope": "Select Scope",
   "scopeAuto": "Auto",
-  "scopeGlobal": "Global (All Tables)"
+  "scopeGlobal": "Global (All Tables)",
+  "searchCriteria": "Search Criteria",
+  "addSearchRow": "Add Search Row",
+  "removeRow": "Remove row"
 }
