profile search changes

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -223,7 +223,7 @@
   "contentCannotBeDisplayed": "لا يمكن عرض المحتوى",
   "LoadingDocument": "جاري تحميل المستند",
   "generatedLinksSuccess": "تم إنشاء الروابط بنجاح",
-  "researcher": "بحث الملفات",
+  "profilesearch": "بحث الملفات",
   "searchType": "نوع البحث",
   "selectType": "اختر النوع",
   "keyword": "كلمة البحث",
@@ -232,7 +232,7 @@
   "toDate": "إلى تاريخ",
   "searching": "جاري البحث...",
   "startSearchPrompt": "اختر نوعاً وأدخل معايير للبحث.",
-  "researcherDesc": "البحث في ملفات التعريف عبر جميع النماذج",
+  "profilesearchDesc": "البحث في ملفات التعريف عبر جميع النماذج",
   "matchType": "نوع المطابقة",
   "matchContains": "يحتوي على",
   "matchExact": "تطابق تام",
