--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -224,7 +224,7 @@
   "contentCannotBeDisplayed": "Content cannot be displayed",
   "LoadingDocument": "Loading document",
   "generatedLinksSuccess": "Successfully generated links",
-  "researcher": "Profile Search",
+  "profilesearch": "Profile Search",
   "searchType": "Search Type",
   "selectType": "Select Type",
   "keyword": "Keyword",
@@ -233,7 +233,7 @@
   "toDate": "To Date",
   "searching": "Searching...",
   "startSearchPrompt": "Select a type and enter criteria to search.",
-  "researcherDesc": "Search document profiles across all forms",
+  "profilesearchDesc": "Search document profiles across all forms",
   "matchType": "Match Type",
   "matchContains": "Contains",
   "matchExact": "Exact Match",
